--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -1,12 +1,48 @@
-<div id="rs-navigation" class="circle">
-        <span><img src="{{ url_for('static', filename='img/logo.png') }}"/></span>
-        <span id="rs-reisesteine" style="cursor:pointer;">REISESTEINE</span>
-        <span>ÜBER UNS</span>
-        <span>MITMACHEN</span>
-        <span>de / en</span> 
-</div>
-
 <svg class="rs-close" style="display: none" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
     <path fill="#FFF" d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
     <path d="M0 0h48v48h-48z" fill="none"/>
-</svg>   
+</svg>
+
+
+<div id="rs-nav-background" class="circle">
+    <div id="rs-small-navigation">
+            <a id="rs-small-home" href="/"><img src="{{ url_for('static', filename='img/logo.png') }}"/></a>
+            <a id="rs-small-menu" href="#" >
+                <svg height="50px" viewBox="0 0 32 32">
+                    <path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/>
+                </svg>
+            </a>
+            <span>
+                <a id="rs-small-de" href="">de</a> / <a id="rs-small-en" href="">en</a>
+            </span>
+    </div>
+
+
+
+    <div id="rs-nav">
+        <div>
+            <a id="rs-nav-home" class="rs-logo" href="/"><img src="{{ url_for('static', filename='img/logo.png') }}"/></a>
+            <span class="rs-title">Reisesteine</span>
+        </div>
+        <div class="rs-nav-indexpages">
+            <a id="rs-nav-steine" href="#">Steine</a>
+            <a id="rs-nav-geschichten" href="#">Geschichten</a>
+            <a id="rs-nav-fundorte" href="#">Fundorte</a>
+            <a id="rs-nav-geologie" href="#">Geologie</a>
+        </div>
+
+        <div class="rs-nav-impressum">
+            <a id="rs-nav-about"href="">Über Uns</a>
+            <a id="rs-nav-participate"href="">Mitmachen</a>
+        </div>
+
+        <div class="rs-nav-controls">
+            <svg id="rs-nav-close" xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 48 48">
+                <path d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
+            </svg>
+            <span>
+                <a id="rs-nav-de" href="">de</a> / <a id="rs-nav-en" href="">en</a>
+            </span>
+        </div>
+    </div>
+</div>
