--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -1,6 +1,5 @@
-<svg class="rs-close" style="display: none" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
-    <path fill="#FFF" d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
-    <path d="M0 0h48v48h-48z" fill="none"/>
+<svg class="rs-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
+    <path d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
 </svg>
 
 
@@ -13,7 +12,7 @@
                 </svg>
             </a>
             <span>
-                <a id="rs-small-de" href="">de</a> / <a id="rs-small-en" href="">en</a>
+                <a id="rs-small-de" href="/de">de</a> / <a id="rs-small-en" href="/en">en</a>
             </span>
     </div>
 
@@ -41,7 +40,7 @@
                 <path d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
             </svg>
             <span>
-                <a id="rs-nav-de" href="">de</a> / <a id="rs-nav-en" href="">en</a>
+                <a id="rs-nav-de" href="/de">de</a> / <a id="rs-nav-en" href="/en">en</a>
             </span>
         </div>
     </div>
