--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -12,7 +12,7 @@ body.rs-frontend {
     font-family: 'Sen', sans-serif;
     font-weight: 400;
     font-size: 1rem;
-    color: rgb(20,80,30);
+    color: rgb(24, 38, 50);
 }
 
  div {
@@ -51,7 +51,7 @@ h1 {
     font-weight: 400;
     font-size: 3.4rem;
     margin: 0 0 -0.5rem 0;
-    color: rgb(20,80,30);
+    color: rgb(24, 38, 50);
 }
 
 h2 {
@@ -59,7 +59,7 @@ h2 {
     font-weight: 400;
     font-size: 3.0rem;
     margin: 15px 0 0 0;
-    color: rgb(20,80,30);
+    color: rgb(24, 38, 50);
 }
 
 h3 {
@@ -67,7 +67,7 @@ h3 {
     font-weight: 400;
     font-size: 1.8rem;
     margin: 0 0 -5px 0;
-    color: rgb(20,80,30);
+    color: rgb(24, 38, 50);
 }
 
 h4 {
@@ -409,8 +409,9 @@ h4.active {
     margin:0 10px 5px 5px;
 }
 
+
 /************************** REISESTEINE DRAGGABLE ******************************************/
-.rs-index-reisesteine {
+.rs-index {
     display: flex;
     flex-wrap: wrap;
     z-index: 3;
@@ -423,15 +424,17 @@ h4.active {
     padding: 200px;
 }
 
-.rs-index-reisesteine:active {
+.rs-index:active {
     cursor: grabbing;
 }
-
+.rs-index>div {
+    cursor: pointer;
+    background-color: rgba(0,0,0,0);
+}
 .rs-index-reisesteine>div {
-    margin: 25px 100px;
+    margin: 20px 75px;
     height: 300px;
     width: 300px;
-    background-color: white;
 }
 
 .rs-index-reisesteine img {
@@ -440,6 +443,45 @@ h4.active {
     filter: drop-shadow(5px 5px 5px #222);
 }
 
+.rs-index-geschichten>div {
+    margin: 25px 25px;
+    height: 100px;
+    width: 200px
+}
+
+.rs-index-geschichten a {
+    font-family: 'Passion One', cursive;
+    font-weight: 700;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: rgb(24, 38, 50);
+}
+
+.rs-index-geologie>div {
+    margin: 25px 25px;
+    height: 100px;
+    width: 300px
+}
+
+.rs-index-geologie a {
+    font-family: 'Passion One', cursive;
+    font-weight: 700;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: rgb(24, 38, 50);
+}
+
+.rs-index-fundort>div {
+    margin: 20px 75px;
+    height: 300px;
+    width: 300px;
+}
+
+.rs-index-fundort img {
+    max-height: 100%;
+    max-width: 100%;
+    filter: drop-shadow(5px 5px 5px #222);
+}
 
 /************************** BACKEND ******************************************/
 .form-group img {
@@ -472,7 +514,6 @@ h4.active {
 .leaflet-tooltip.rs-tooltip div{
     margin: 20px 5px 0 5px;
 }
-
 
 .leaflet-tooltip.rs-tooltip:before {
     border-top-color: rgba(256, 256, 256, 0.8);
