--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -2,6 +2,10 @@
     <path d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
 </svg>
 
+<div id="rs-title">
+    <p>Reisesteine</p>
+    <p>Eine interaktive virtuelle Ausstellung des focusTerra</p>
+</div>
 
 <div id="rs-nav-background" class="circle">
     <div id="rs-small-navigation">
