--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -214,21 +214,25 @@ h4.active {
 
 .rs-footer {
     position: absolute;
-    bottom: 40vh;
-    right: 30px;
-    width:15vw;
-    height: 15vh;
+    bottom: -70px;
+    right: -70px;
+    width:250px;
+    height: 250px;
     z-index: 4;
     display: flex;
     flex-direction: column;
+    text-align: right;
+    padding: 30px;
+}
+
+.rs-footer.circle:hover {
+    border-radius: 50%;
+    background-color: rgba(256, 256, 256, 0.75);
 }
 
 .rs-footer h4 {
     cursor: pointer;
-}
-
-.rs-footer div {
-    margin: auto auto 5px auto;
+    margin-top: 6px;
 }
 
 .rs-footer svg {
@@ -238,6 +242,11 @@ h4.active {
     fill: rgb(180, 30, 30);
 }
 
+.rs-footer-content {
+    width: 200px;
+    margin-left: -70px;
+    margin-top: -10px;
+}
 
 @media only screen and (max-width: 960px) {
     .rs-footer {
@@ -273,20 +282,20 @@ h4.active {
     height: 40px;
 }
 
-#rs-small-navigation svg {
-    height: 40px;
-    fill: rgb(180, 30, 30);
+#rs-small-menu img {
+    height: 27px;
+    margin-top: 10px;
 }
 
 #rs-small-navigation a {
     margin: 3px auto 3px auto;
     text-align: center;
-    padding-left: 50px;
+    padding-left: 40px;
 }
 
 #rs-small-navigation span {
     text-align: center;
-    padding-left: 50px;
+    padding-left: 40px;
 }
 
 #rs-small-navigation span a {
@@ -302,8 +311,30 @@ h4.active {
     margin-top: 90px;
 }
 
+#rs-nav-background.active #rs-small-navigation a:first-child {
+    margin-top: 110px;
+}
+
+#rs-small-uebersicht {
+    position: absolute;
+    top: 15px;
+    left: 85px; 
+}
+#rs-small-uebersicht img {
+    height: 37px;
+    width: 37px;
+}
+
+#rs-nav-background.active #rs-small-navigation span {
+    display: none;
+}
+
 #rs-nav-background.active {
-    background-color: transparent!important;
+    background-color: rgba(256, 256, 256, 0);
+}
+
+#rs-nav-background.active:hover {
+    background-color: rgba(256, 256, 256, 0.65);
 }
 
 .rs-close {
