--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -9,18 +9,14 @@
 
 <div id="rs-nav-background" class="circle">
     <div id="rs-small-navigation">
-            <a id="rs-small-home" href="/"><img src="{{ url_for('static', filename='img/logo.png') }}"/></a>
+            <a id="rs-small-home" href="/"><img src="{{ url_for('static', filename='img/logo.svg') }}"/></a>
             <a id="rs-small-menu" href="#" >
-                <svg height="50px" viewBox="0 0 32 32">
-                    <path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/>
-                </svg>
+                <img src="{{ url_for('static', filename='img/sandwich_button.svg') }}"/>
             </a>
             <span>
                 <a id="rs-small-de" href="/de">de</a> / <a id="rs-small-en" href="/en">en</a>
             </span>
     </div>
-
-
 
     <div id="rs-nav">
         <div>
