--- a/project/blueprints/reisesteine/templates/reisesteine/backend/editStein.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/backend/editStein.html
@@ -30,6 +30,11 @@
                         <div class="form-group">
                             {{ form.wohnort.label }}
                             {{ form.wohnort(class_="form-control rs-person", readonly=user) }}
+                            {% for error in form.wohnort.errors %}
+                                <div class="invalid-feedback">
+                                    {{error}}
+                                </div>
+                            {% endfor %}
                         </div>
                         <div class="form-group">
                             {{ form.email.label }}
@@ -98,10 +103,24 @@
                                 {{ form.stein_id.label }}
                                 {{ form.stein_id(class_="form-control", readonly=true) }}
                             </div>
-
+                            
+                            <div class="col-md-6">
+                                <div class="form-check ml-3">
+                                    {{ form.published(class_="form-check-input") }}
+                                    {{ form.published.label(class_="form-check-label")}}
+                                </div>
+                                <a target="_blank" href="#" class="btn btn-primary mt-2 ml-3">Vorschau</a>
+                            </div>
+                        </div>
+                        <div class="form-row">
                             <div class="form-group col-md-6">
                                 {{ form.herkunft.label }}
                                 {{ form.herkunft(class_="form-control") }}
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                {{ form.land.label }}
+                                {{ form.land(class_="form-control") }}
                             </div>
                         </div>
                         <div class="form-row">
@@ -128,7 +147,8 @@
                         </div>
                         <div class="form-group">
                             {{ form.titel.label }}
-                            {{ form.titel(class_="form-control") }}
+                            {{ form.titel(class_="form-control", maxlength="25") }}
+                            <small id="titelhelp" class="form-text text-muted"><span id="current_titel">0</span>/ 25</small>
                         </div>
                         <div class="form-group">
                             {{ form.bild_stein.label }}
@@ -148,9 +168,9 @@
                             {{ form.bild_herkunft(class_="form-control" + (" is-invalid" if form.bild_herkunft.errors else "")) }}
                             <small id="herkunftHelp" class="form-text text-muted">max. 2MB</small>
                             {% for error in form.bild_herkunft.errors %}
-                            <div class="invalid-feedback">
-                                {{error}}
-                            </div>
+                                <div class="invalid-feedback">
+                                    {{error}}
+                                </div>
                             {% endfor %}
                             {% if herkunft %}
                                 <img id="img_herkunft" src="{{ url_for('static', filename='img/steine/{}'.format(herkunft)) }}">
@@ -216,6 +236,10 @@
     document.getElementById('current_geologie').innerHTML = document.getElementById('geo_geschichte').value.length;
     document.getElementById('geo_geschichte').addEventListener('keyup', function(e){
         document.getElementById('current_geologie').innerHTML = this.value.length;
+    });
+    document.getElementById('current_titel').innerHTML = document.getElementById('titel').value.length;
+    document.getElementById('titel').addEventListener('keyup', function(e){
+        document.getElementById('current_titel').innerHTML = this.value.length;
     });
 </script>
 
