--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -20,7 +20,7 @@
 
     <div id="rs-nav">
         <div>
-            <a id="rs-nav-home" class="rs-logo" href="/"><img src="{{ url_for('static', filename='img/logo.png') }}"/></a>
+            <a id="rs-nav-home" class="rs-logo" href="/"><img src="{{ url_for('static', filename='img/logo.svg') }}"/></a>
             <span class="rs-title">Reisesteine</span>
         </div>
         <div class="rs-nav-indexpages">
